# vtx-align

./: .gitignore  BadLadders.h  BeamCenter.C  BeamCenterFuncs.h  CalcBeamCenter.C  CalcDCBeamCenter.C  CheckParLabels.C  CheckTrackFits.C  ConfigFileToBCGraph.C  ConstraintBuilder.h  DataRejector.h  DcaFunctions.h  DiffGeometry.C  DiffGeometryConfig.C  DrawEWOffset.C  DrawResults.C  EastWestOffset.C  FilterData.C  GLSFitter.h  GenerateEvents.C  MilleFunctions.h  ModifyParFile.C  PROCEDURE.md  ParameterDefs.h  README.md  SimpleExample.C  TODO.md  TrackGen.h  TrackInfo.C  UtilFns.h  VertexFinder.h  VtxAlign.C  VtxAlignBase.h  VtxIO.h  VtxVis.h  cleanup.sh  reformat.py  rootlogon.C  run-alignment.py  test_eventsync.C
AnaAlignmentProd/: AnaAlignmentProd.C  AnaAlignmentProd.h  AnaAlignmentProdLinkDef.h  Makefile.am
AnaVTXCluster/: AnaVTXCluster.C  AnaVTXCluster.h  AnaVTXClusterLinkDef.h  Makefile.am  configure.in
ProdEventCutter/: Makefile.am  ProdEventCutter.C  ProdEventCutter.h  ProdEventCutterLinkDef.h  configure.in
deprecated/: CalcBeamCenter.C
geom/: 411768-0-1.par  411768-0-11.par  411768-0-2.par  411768-0-3.par  411768-1-1.par  411768-1-11.par  411768-1-2.par  411768-1-3.par  411768-1-4.par  411768-2-1.par  411768-2-2.par  411768-2-3.par  411768-20-2.par  411768-21-1.par  411768-22-11.par  411768-22-13.par  411768-22-2.par  411768-23-1.par  411768-3-1.par  411768-3-2.par  411768-3-3.par  411768-4-1.par  411768-5-1.par  411768-6-1.par  411768-6-22.par  411768-6-32.par  411768-7-2.par  svxPISA-411768.par.1  svxPISA-411768.par.2  svxPISA-hubert-mod.par  svxPISA-hubert.par  svxPISA-ideal.par.411768.1  svxPISA.par_v18-2
geom/run14auau200/: 411768-0-1.par  411768-1-12.par  411768-1-4.par  411768-2-1.par  411768-2-2-mod.par  411768-22-12.par  411768-3-2.par  411768-5-1.par
geom/run15pp200/: 421822-0-2.par  421822-1-1.par  421822-1-2.par  421822-10-1.par  421822-11-1.par  421822-11-2.par  421822-12-1.par  421822-12-2.par  421822-13-1.par  (+4 more)
logs/: dp-411768-100-0.txt  dp-411768-2-0.txt  iter0-bc.txt  iter1-bc.txt
mille/: Mille.cc  Mille.h
old-geom/: 411768-0-0.par  411768-1-0.par  411768-1-1.par  411768-1-3.par  411768-2-1.par  411768-3-1.par  411768-6-12.par  411768-6-2.par  411768-7-1.par  svxPISA-411768.par  svxPISA_Run14AuAu200_dchp2_v8.par
production/: Fun4All_RUN14AuAu_VTX.C  Fun4All_VTX_ZeroField.C
rootfiles/: bc-421822.root
(+105 files in other folders)
