AC_INIT(configure.in)

AM_INIT_AUTOMAKE(Run11AuAuSvxCentralTrackTree, 1.00)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

ROOTLIBS=`root-config --libs`
AC_SUBST(ROOTLIBS)

AC_CONFIG_MACRO_DIR([m4])

dnl   no point in suppressing warnings people should 
dnl   at least see them, so here we go for g++: -Wall
if test $ac_cv_prog_gxx = yes; then
   CXXFLAGS="$CXXFLAGS -Wall"
fi

AC_OUTPUT(Makefile)
